--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
     async function predict() {
         // predict can take in an image, video or canvas html element
         const prediction = await model.predict(webcam.canvas);
-        if(prediction[0].probability.toFixed(2) > 0.6){
+        prediction[0].probability.toFixed(2) > 0.6
+        {
             labelContainer.childNodes[0].innerHTML = "カギがしまってます"
             var audio = new Audio('se_pikon23.mp3');
-            audio.play();
-            Thread.sleep(5000);
+            audio.play()
+            Thread.sleep(1000)}
 
-            break;
-
-        }else if(prediction[1].probability.toFixed(2) > 0.6){
+         
+        prediction[1].probability.toFixed(2) > 0.6
+        {
                 labelContainer.childNodes[1].innerHTML = "カギが空いています"
                 var audio = new Audio('se_bukimi2.mp3');
                 audio.play();
-                Thread.sleep(5000);
+                Thread.sleep(1000);}
 
-                break;
-        }
+                
             //for (let i = 0; i < maxPredictions; i++) {
          //   const classPrediction =
         //        prediction[i].className + ": " + prediction[i].probability.toFixed(2);
